--- a/css/styles.css
+++ b/css/styles.css
@@ -112,18 +112,17 @@ text-decoration: none;
     color: #2196F3;
 }
 
-
-
-.navigation-list li a{
-    font-family: 'Roboto';
-    font-style: normal;
+.navigation-list .link-style {
     font-weight: 500;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     letter-spacing: 0.02em;
-    text-decoration: none;
     color: #212121;
-     }
+    text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
 
 .link-button{
 font-family: 'Roboto';
@@ -296,6 +295,17 @@ background: #2F303A;
 text-decoration: none;
 }
 
+.right-navigation-list .link-style {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: #757575;
+    text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
 .link-style:hover {
     color: #2196F3;
 }
@@ -308,6 +318,7 @@ text-decoration: none;
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
     font-style: normal;
+    transition: color 250ms cubic-bezier(0.4,0,0.2,1);
 }
 
 
@@ -601,4 +612,52 @@ border-bottom: 1px solid #ECECEC;
 }
 .insta-color{
     fill: white;
+}
+
+/* HOMEWORK 5 */
+
+.link-bottom-border{
+    position: relative;
+}
+
+.link-bottom-border:hover{
+    color: #2196F3;
+}
+
+.link-bottom-border:focus{
+    color: #2196F3;
+}
+
+.link-bottom-border::after{
+    content: '';
+    border: 2px solid #2196F3;
+    width: 100%;
+    position: absolute;
+    bottom: -32px;
+    border-radius: 2px;
+    visibility: visible;
+    left: 0;
+
+}
+
+.what-we-do-photo li {
+    position: relative;
+}
+
+.what-we-do-description{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 370px;
+    height: 70px;
+    background: rgba(47, 48, 58, 0.8);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    position: absolute;
+    bottom: 4px;
 }
