--- a/css/styles.css
+++ b/css/styles.css
@@ -693,3 +693,46 @@ border-bottom: 1px solid #ECECEC;
 .border-line {
     z-index: 1;
 }
+
+.modal {
+    background: rgba(0, 0, 0, 0.2);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.inner-div {
+    position: absolute;
+    width: 528px;
+    height: 581px;
+    transform: rotate(-50%, -50%);
+    background: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    display: flex;
+    justify-content: right;
+    padding-top: 8px;
+    padding-right: 8px;
+}
+
+.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+}
+
+.modal-close-button {
+    fill: #000000;
+    display: flex;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 9px 9px 10px 10px;
+}
